# live-training-evaluator

./: .gitignore
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/app/: db.py  main.py
frontend/: Makefile  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: BarChart.svelte  config.svelte.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/[label]/: +page.svelte
